@@ -1,5 +1,7 @@
 #VERSION 0.9.0#
 
+ - added method query() to Peak_Model_Zendatable
+
  - fixed methods render() and output() in Peak_Render_VirtualLayouts due to recent change in Peak_View_Render
 
  - fixed Vendors path name in autoload.php
